Bug 280382 - Unable to add applets to Context View after starting Amarok with no applets
Summary: Unable to add applets to Context View after starting Amarok with no applets
Status: CLOSED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View (other bugs)
Version First Reported In: 2.4.3
Platform: Debian testing Linux
: NOR minor
Target Milestone: 2.5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-18 22:02 UTC by Philippe Cloutier
Modified: 2011-12-27 02:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Cloutier 2011-08-18 22:02:11 UTC
When removing applets from the Context View, you can see the controls acting up, like one wrench icon on the left and another one on the right. If you go to the end though and remove all applets, it gets worst - the controls are gone when restarting Amarok. The Context View shows a plain gray background, an empty blue bar at the bottom and apparently no way to restore the controls from the GUI.

I reported that on #amarok. Sam Lade was the only one to try reproducing and he was able to. He offered the following workaround:
remove the line plugins[$d] from ~/.kde/share/config/amarok_homerc.

Doing that while Amarok is closed works fine and at the next startup the 3 default applets are back.
Comment 1 Nikhil Marathe 2011-08-21 06:58:02 UTC
I can reproduce this with the latest git master, including the fix of removing plugins[$d]
Comment 2 Nikhil Marathe 2011-08-21 09:49:21 UTC
Fix at https://git.reviewboard.kde.org/r/102395/
Comment 3 Nikhil Marathe 2011-08-23 05:32:08 UTC
Git commit 167b91ac446f51f8ef64d9a1b7d666d2ab7d3386 by Nikhil Marathe.
Committed on 21/08/2011 at 09:29.
Pushed by nikhilm into branch 'master'.

Add the AppletToolbarConfigItem even when no applets are present.

BUG: 280382
REVIEW: 102395

Move config wrench initialization to constructor.

Creating the wrench only when an applet is added prevents it from being
added when no applets are present in the ContextView.

refactor AppletToolbarAppletItem creation

Since its always null in the constructor, remove the check

Added bugfix to changelog

M  +11   -24   src/context/toolbar/AppletToolbar.cpp
M  +2    -0    ChangeLog

http://commits.kde.org/amarok/167b91ac446f51f8ef64d9a1b7d666d2ab7d3386