Add the AppletToolbarConfigItem even when no applets are present.

BUG: 280382
REVIEW: 102395

Move config wrench initialization to constructor.

Creating the wrench only when an applet is added prevents it from being
added when no applets are present in the ContextView.

refactor AppletToolbarAppletItem creation

Since its always null in the constructor, remove the check

Added bugfix to changelog